Bug 494157 - nanojit debug output uses inconsistent output channels, r=gal.